edit delete Banners success

--- a/public/css/frontend_css/main.css
+++ b/public/css/frontend_css/main.css
@@ -36,6 +36,7 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto', sans-serif;
+  /* font-family: 'phetsarath OT'; */
 }
 
 .btn:hover, 
@@ -52,7 +53,7 @@ a#scrollUp {
   bottom: 0px;
   right: 10px;
   padding: 5px 10px;
-  background: #FE980F;
+  background: #26A69A;
   color: #FFF;
   -webkit-animation: bounce 2s ease infinite;
   animation: bounce 2s ease infinite;
@@ -162,13 +163,13 @@ a#scrollUp i{
 }
 
 .usa:hover {
-	background:#FE980F;
+	background:#26A69A;
 	color:#fff;
-	border-color:#FE980F;
+	border-color:#26A69A;
 }
 
 .usa:active, .usa.active {
-  background: none repeat scroll 0 0 #FE980F;
+  background: none repeat scroll 0 0 #26A69A;
   box-shadow: inherit;
   outline: 0 none;
 }
@@ -179,7 +180,7 @@ a#scrollUp i{
 }
 
 .dropdown-menu  li  a:hover, .dropdown-menu  li  a:focus {
-  background-color: #FE980F;
+  background-color: #26A69A;
   color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
   text-decoration: none;
@@ -215,7 +216,7 @@ a#scrollUp i{
 
 
 .shop-menu ul li a:hover {
-	color:#fe980f;
+	color:#26A69A;
 	background:#fff;
 }
 
@@ -232,6 +233,7 @@ a#scrollUp i{
 .mainmenu ul li{
   padding-right: 15px;
   padding-left: 15px;
+  color:#26A69A;
 }
 
 .mainmenu ul li:first-child{
@@ -249,7 +251,7 @@ a#scrollUp i{
 
 .mainmenu ul li a:hover, .mainmenu ul li a.active,  .shop-menu ul li a.active{
 	background:none;
-	color:#fdb45e;
+	color:#26A69A;
 }
 
 .search_box input {
@@ -302,7 +304,7 @@ ul.sub-menu {
 }
 
 .dropdown ul.sub-menu li .active{
-  color: #FDB45E;
+  color:#26A69A;
   padding-left: 0;
 }
 
@@ -320,7 +322,7 @@ ul.sub-menu {
 }
 
 .navbar-nav li ul.sub-menu li a:hover{
-    color: #FDB45E;
+  color:#26A69A;
 }
 
 .fa-angle-down{
@@ -367,7 +369,7 @@ ul.sub-menu {
 }
 
 .companyinfo h2  span{
-  color:#FE980F;
+  color:#26A69A;
 }
 
 .companyinfo p {
@@ -405,7 +407,7 @@ ul.sub-menu {
   top: 0;
   width: 100%;
   height: 61px;
-  background: #FE980F;
+  background: #26A69A;
   border-radius: 3px;
   color: #FFF;
   font-size: 20px;
@@ -501,7 +503,7 @@ ul.sub-menu {
 
 .single-widget ul li a:hover{
 	background:none;
-	color:#FE980F;
+	color:#26A69A;
 }
 
 
@@ -518,7 +520,7 @@ ul.sub-menu {
 
 
 .searchform button {
-  background: #FE980F;
+  background: #26A69A;
   border: medium none;
   border-radius: 0;
   margin-left: -5px;
@@ -533,7 +535,7 @@ ul.sub-menu {
 
 .searchform  button:hover, 
 .searchform  button:focus{
-	background-color:#FE980F;
+	background-color:#26A69A;
 }
 
 .searchform p {
@@ -557,7 +559,7 @@ ul.sub-menu {
 }
 
 .footer-bottom p span a {
-  color: #FE980F;
+  color: #26A69A;
   font-style: italic;
   text-decoration: underline;
 }
@@ -577,7 +579,7 @@ ul.sub-menu {
 }
 
 .carousel-indicators li.active {
-	  background: #FE980F;
+	  background: #26A69A;
 }
 
 .item {
@@ -603,7 +605,7 @@ ul.sub-menu {
 }
 
 .item h1 span {
-	color:#FE980F;
+	color:#26A69A;
 }
 
 .item h2 {
@@ -623,7 +625,7 @@ ul.sub-menu {
 }
 
 .get {
-  background: #FE980F;
+  background: #26A69A;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -635,7 +637,7 @@ ul.sub-menu {
 
 
 .item button:hover {
-  background: #FE980F;
+  background: #26A69A;
 }
 
 .control-carousel {
@@ -646,7 +648,7 @@ ul.sub-menu {
 }
 
 .control-carousel:hover{
-  color: #FE980F ;
+  color: #26A69A ;
 }
 
 .right {
@@ -660,7 +662,7 @@ ul.sub-menu {
   padding-top: 15px;
 }
 .left-sidebar h2, .brands_products h2 {
-  color: #FE980F;
+  color: #26A69A;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -807,7 +809,7 @@ h2.title:before{
 
 
 .tooltip-inner {
-  background-color: #FE980F;
+  background-color: #26A69A;
   border-radius: 4px;
   color: #FFFFFF;
   max-width: 200px;
@@ -817,7 +819,7 @@ h2.title:before{
 }
 
 .tooltip.top .tooltip-arrow {
-  border-top-color: #FE980F;
+  border-top-color: #26A69A;
   border-width: 5px 5px 0;
   bottom: 0;
   left: 50%;
@@ -835,7 +837,7 @@ h2.title:before{
 
 
 h2.title {
-  color: #FE980F;
+  color: #26A69A;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -862,7 +864,7 @@ h2.title {
 }
 
 .productinfo h2{
-	color: #FE980F;
+	color: #26A69A;
 	font-family: 'Roboto', sans-serif;
 	font-size: 24px;
 	font-weight: 700;
@@ -891,7 +893,7 @@ h2.title {
 }
 
 .product-overlay {
-  background:#FE980F;
+  background:#26A69A;
   top: 0;
   display: none;
   height: 0;
@@ -920,7 +922,7 @@ h2.title {
   background:#fff;
   border: 0 none;
   border-radius: 0;
-  color: #FE980F;
+  color: #26A69A;
   font-family: 'Roboto', sans-serif;
   font-size: 15px;
   margin-bottom: 25px;
@@ -928,7 +930,7 @@ h2.title {
 
 .product-overlay .add-to-cart:hover {
   background:#fff;
-  color: #FE980F;
+  color: #26A69A;
 }
 
 
@@ -952,7 +954,7 @@ h2.title {
 }
 
 .add-to-cart:hover {
-  background: #FE980F;
+  background: #26A69A;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -967,7 +969,7 @@ h2.title {
 }
 
 .add-to-cart:hover {
-  background: #FE980F;
+  background: #26A69A;
   color: #FFFFFF;
 }
 
@@ -989,7 +991,7 @@ h2.title {
 
 .choose ul li a:hover{
 	background:none;
-	color:#FE980F;
+	color:#26A69A;
 }
 
 .category-tab {
@@ -998,7 +1000,7 @@ h2.title {
 
 .category-tab ul {
   background: #40403E;
-  border-bottom: 1px solid #FE980F;
+  border-bottom: 1px solid #26A69A;
   list-style: none outside none;
   margin: 0 0 30px;
   padding: 0;
@@ -1016,7 +1018,7 @@ h2.title {
 }
 
 .category-tab ul  li  a:hover{
-	background:#FE980F;
+	background:#26A69A;
 	color:#fff;
 }
 
@@ -1025,7 +1027,7 @@ h2.title {
   -moz-border-left-colors: none;
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
-  background-color: #FE980F;
+  background-color: #26A69A;
   border:0px;
   color: #FFFFFF;
   cursor: default;
@@ -1054,7 +1056,7 @@ h2.title {
 }
 
 .recommended-item-control i {
-  background: none repeat scroll 0 0 #FE980F;
+  background: none repeat scroll 0 0 #26A69A;
   color: #FFFFFF;
   font-size: 20px;
   padding: 4px 10px;
@@ -1113,8 +1115,8 @@ h2.title {
 }
 
 .pagination  .active  a, .pagination  .active  span, .pagination  .active  a:hover, .pagination  .active  span:hover, .pagination  .active  a:focus, .pagination  .active  span:focus {
-  background-color: #FE980F;
-  border-color: #FE980F;
+  background-color: #26A69A;
+  border-color: #26A69A;
   color: #FFFFFF;
   cursor: default;
   z-index: 2;
@@ -1134,7 +1136,7 @@ h2.title {
 }
 
 .pagination  li  a:hover{
-	background:#FE980F;
+	background:#26A69A;
 	color:#fff;
 }
 
@@ -1173,7 +1175,7 @@ h2.title {
 
 
 .view-product h3 {
-  background: #FE980F;
+  background: #26A69A;
   bottom: 0;
   color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
@@ -1199,7 +1201,7 @@ h2.title {
   top: 35%;
 }
 .item-control i {
-  background: #FE980F;
+  background: #26A69A;
   color: #FFFFFF;
   font-size: 20px;
   padding: 5px 10px;
@@ -1244,7 +1246,7 @@ h2.title {
 }
 
 .product-information span span {
-  color: #FE980F;
+  color: #26A69A;
   float: left;
   font-family: 'Roboto', sans-serif;
   font-size: 30px;
@@ -1277,7 +1279,7 @@ h2.title {
 
 
 .cart {
-  background: #FE980F;
+  background: #26A69A;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1322,13 +1324,13 @@ h2.title {
 }
 
 #reviews ul li a i{
-	color:#FE980F;
+	color:#26A69A;
 	padding-right:8px;
 }
 
 #reviews ul li a:hover{
 	background:#fff;
-	color:#FE980F;
+	color:#26A69A;
 }
 
 #reviews p{
@@ -1368,7 +1370,7 @@ h2.title {
 }
 
 #reviews button {
-  background: #FE980F;
+  background: #26A69A;
   border: 0 none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1407,7 +1409,7 @@ h2.title {
 }
 
 .content-404 h2 a {
-  background: #FE980F;
+  background: #26A69A;
   color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
   font-size: 44px;
@@ -1475,7 +1477,7 @@ h2.title {
 }
 
 .login-form form button, .signup-form form button {
-  background: #FE980F;
+  background: #26A69A;
   border: medium none;
   border-radius: 0;
   color: #FFFFFF;
@@ -1500,7 +1502,7 @@ h2.title {
 
 
 .or{
-	background: #FE980F;
+	background: #26A69A;
 	border-radius: 40px;
 	color: #FFFFFF;
 	font-family: 'Roboto', sans-serif;
@@ -1532,7 +1534,7 @@ h2.title {
 }
 
 .breadcrumbs .breadcrumb li a {
-  background:#FE980F;
+  background:#26A69A;
   color: #FFFFFF;
   padding: 3px 7px;
 }
@@ -1543,7 +1545,7 @@ h2.title {
   width: auto;
   border-width: 8px;
   border-style: solid;
-  border-color:transparent transparent transparent #FE980F;
+  border-color:transparent transparent transparent #26A69A;
   position: absolute;
   top: 11px;
   left:48px;
@@ -1561,7 +1563,7 @@ h2.title {
 
 
 #cart_items .cart_info .cart_menu {
-  background: #FE980F;
+  background: #26A69A;
   color: #fff;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
@@ -1616,7 +1618,7 @@ h2.title {
 
 
 #cart_items .cart_info .cart_total_price {
-  color: #FE980F;
+  color: #26A69A;
   font-size: 24px;
 }
 
@@ -1663,7 +1665,7 @@ h2.title {
 }
 
 .cart_delete a:hover {
-  background:#FE980F
+  background:#26A69A
 }
 
 
@@ -1768,7 +1770,7 @@ h2.title {
 }
 
 .update, .check_out {
-  background: #FE980F;
+  background: #26A69A;
   border-radius: 0;
   color: #FFFFFF;
   margin-top: 18px;
@@ -1835,7 +1837,7 @@ h2.title {
 }
 
 .checkout-options .nav li a {
-  color: #FE980F;
+  color: #26A69A;
   font-size: 18px;
   font-weight: normal;
   padding: 0
@@ -1849,7 +1851,7 @@ h2.title {
   margin-right: 10px;
   border-radius: 50%;
   padding: 5px;
-  background: #FE980F;
+  background: #26A69A;
   color:#fff;
   font-size: 14px;
   padding: 2px 3px;
@@ -1880,7 +1882,7 @@ h2.title {
 
 
 .shopper-info .btn-primary {
-  background: #FE980F;
+  background: #26A69A;
   border: 0 none;
   border-radius: 0;
   margin-right: 15px;
@@ -1965,7 +1967,7 @@ h2.title {
 
 #cart_items .cart_info 
 .table.table-condensed.total-result span {
-  color: #FE980F;
+  color: #26A69A;
   font-weight: 700;
   font-size: 16px
 }
@@ -2036,7 +2038,7 @@ h2.title {
 
 .blog-post-area 
 .post-meta ul li i {
-  background:#FE980F;
+  background:#26A69A;
   color: #FFFFFF;
   margin-left: -4px;
   margin-right: 7px;
@@ -2050,7 +2052,7 @@ h2.title {
   position: absolute;
   width: auto;
   height: auto;
-  border-color:transparent transparent transparent #FE980F;
+  border-color:transparent transparent transparent #26A69A;
   border-width:4px;
   border-style: solid;
   top:6px;
@@ -2060,7 +2062,7 @@ h2.title {
 .blog-post-area 
 .post-meta ul span {
   float: right;
-  color: #FE980F
+  color: #26A69A
 }
 
 .post-meta span{
@@ -2068,14 +2070,14 @@ h2.title {
 }
 
 .post-meta span i{
-  color: #FE980F
+  color: #26A69A
 }
 
 
 .blog-post-area  
 .single-blog-post 
 .btn-primary {
-  background:#FE980F;
+  background:#26A69A;
   border: medium none;
   border-radius: 0;
   color: #FFFFFF;
@@ -2102,7 +2104,7 @@ h2.title {
 .pagination li a:hover,
 .pagination-area 
 .pagination li .active {
-  background:#FE980F;
+  background:#26A69A;
   color: #fff
 }
 
@@ -2130,7 +2132,7 @@ h2.title {
 
 .pager-area 
 .pager li a:hover {
-  background: #FE980F;
+  background: #26A69A;
   color: #fff
 }
 
@@ -2168,7 +2170,7 @@ h2.title {
 .rating-area 
 .ratings .color, 
 .rating-area .color {
-  color: #FE980F
+  color: #26A69A
 }
 
 
@@ -2257,7 +2259,7 @@ h2.title {
 
 .blog-socials ul li a:hover {
   color: #fff;
-  background:#FE980F
+  background:#26A69A
 }
 
 
@@ -2321,7 +2323,7 @@ h2.title {
 }
 
 .sinlge-post-meta li i {
-  background:#FE980F;
+  background:#26A69A;
   color: #FFFFFF;
   margin-right: 10px;
   padding: 8px 10px;
@@ -2348,7 +2350,7 @@ h2.title {
 }
 
 .replay-box label {
-  background:#FE980F;
+  background:#26A69A;
   color: #FFFFFF;
   margin-bottom: 15px;
   padding: 3px 15px;
@@ -2357,7 +2359,7 @@ h2.title {
 }
 
 .replay-box span {
-  color: #FE980F;
+  color: #26A69A;
   float: right;
   font-weight: 700;
   margin-top: 21px;
@@ -2374,7 +2376,7 @@ h2.title {
 
 .replay-box form input:hover, 
 .text-area textarea:hover {
-  border: 1px solid #FE980F;
+  border: 1px solid #26A69A;
 }
 
 .text-area {
@@ -2387,7 +2389,7 @@ h2.title {
 }
 
 .btn.btn-primary {
-  background:#FE980F;
+  background:#26A69A;
   border: 0 none;
   border-radius: 0;
   margin-top: 16px;
@@ -2404,7 +2406,7 @@ h2.title {
   height: auto;
   border-style: solid;
   border-width: 8px;
-  border-color:#FE980F transparent transparent transparent;
+  border-color:#26A69A transparent transparent transparent;
   top: 25px;
   left: 5px
 } 
@@ -2461,7 +2463,7 @@ h2.title {
 #contact-page .form-control:focus, 
 #contact-page .form-control:hover {
   box-shadow: inherit;
-  border-color: #FDB45E;
+  border-color: #26A69A;
 }
 
 #contact-page .contact-info {
@@ -2512,7 +2514,7 @@ h2.title {
 }
 
 .contact-info .social-networks ul li a:hover{
-  color: #FE980F;
+  color: #26A69A;
 }
 
 
